--- a/create_sql_database.ipynb
+++ b/create_sql_database.ipynb
@@ -34,7 +34,7 @@
      "end_time": "2020-12-17T21:23:10.522663Z",
      "start_time": "2020-12-17T21:22:47.047708Z"
     },
-    "scrolled": true
+    "scrolled": false
    },
    "outputs": [],
    "source": [
@@ -47,6 +47,20 @@
    "source": [
     "![movies.db schema](images/movies_db_schema.png)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -72,7 +86,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.8.5"
   },
   "toc": {
    "base_numbering": 1,
