June 9th PM updates

--- a/Most Profitable Movies, Studios, & Genres.ipynb
+++ b/Most Profitable Movies, Studios, & Genres.ipynb
@@ -1118,7 +1118,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "I want to know the average and median profit for the top 10 movies so we can decide which one is a better indicator on how much profit needs to be made in order for Microsoft's movie studio to be both profitable and a strong contender in the movie business against other movie studios."
+    "I want to know the mean and median profit for the top 10 movies so we can decide which one is a better indicator on how much profit needs to be made in order for Microsoft's movie studio to be both profitable and a strong contender in the movie business against other movie studios."
    ]
   },
   {
@@ -1421,7 +1421,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "If we know which movie studios made the top 10 profitable movies, we can look further into how successful each movie studio is in terms of profits."
+    "If we know which movie studios made the top 10 profitable movies, we can look further into how successful each movie studio is in terms of profits. The first thing I want to do is find out which studios released the top 10 profitable movies."
    ]
   },
   {
@@ -1758,6 +1758,13 @@
    "metadata": {},
    "source": [
     "# 11. Find out which movie studios are making the most profit from the Top 10 Most Profitable Movies."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Now I want to know which studio accumulated the most profit from the top 10 profitable movies."
    ]
   },
   {
@@ -2102,7 +2109,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We're doing this because we want to count the number of times each genre appears for our top 10 profitable movies, and we want to know which genre is the most profitable in the top 10. This will help Microsoft in determining which movie genres will bring the biggest return on investment (ROI)."
+    "We're doing this because we want to count the number of times each genre appears for our top 10 profitable movies, and we want to know which genre is the most profitable in the top 10."
    ]
   },
   {
@@ -3868,22 +3875,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### The data above tells us how profitable each genre is under the Top 10 Worldwide Profitable Movies bar chart. This is important because it tells us which genre has the best chance at making a profit for movie stuios."
+    "### The data above tells us how profitable each genre is under the Top 10 Worldwide Profitable Movies bar chart. This is important because it tells us which genres have the best chance at making a profit for movie studios."
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
