--- a/Top 10 Actors&Actresses and Popularity.ipynb
+++ b/Top 10 Actors&Actresses and Popularity.ipynb
@@ -4,6 +4,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# Top 10 Actors/Actresses\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# 1. Import Data"
    ]
   },
