--- a/Profit_vs_director.ipynb
+++ b/Profit_vs_director.ipynb
@@ -6,7 +6,9 @@
    "source": [
     "# Profit vs Director\n",
     "\n",
-    "This code makes a barplot of the top directors for the most profitable movies. The first three cells will be the same for each plot because I used the same data for all of them."
+    "This code makes a barplot of the top directors for the most profitable movies. The first three cells will be the same for each plot because I used the same data for all of them. \n",
+    "\n",
+    "I looked at each table to make note of all available columns. I noticed the tconst and nconst columns that I counld use to merge all of the data together into one dataframe. After merging, I dropped many columns that I did not need. These included columns that I though contained duplicate information or information that would not be useful. Next, I dropped rows with null values in a subset of all columns. I used outer merges so there where lots of rows with missing data. I wanted to be sure of the data that I had before getting rid of any. I also did not want to drop rows that were only missing data in either domestic or worldwide gross because I only needed one."
    ]
   },
   {
