added explainations to individual ntbks

--- a/Actors_and_actresses_in_the_most_profitable_movies.ipynb
+++ b/Actors_and_actresses_in_the_most_profitable_movies.ipynb
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -51,9 +51,237 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>tconst</th>\n",
+       "      <th>averagerating</th>\n",
+       "      <th>directors</th>\n",
+       "      <th>writers</th>\n",
+       "      <th>movie</th>\n",
+       "      <th>start_year</th>\n",
+       "      <th>runtime_minutes</th>\n",
+       "      <th>genres</th>\n",
+       "      <th>title</th>\n",
+       "      <th>region</th>\n",
+       "      <th>...</th>\n",
+       "      <th>primary_name</th>\n",
+       "      <th>primary_profession</th>\n",
+       "      <th>known_for_titles</th>\n",
+       "      <th>id</th>\n",
+       "      <th>release_date</th>\n",
+       "      <th>production_budget</th>\n",
+       "      <th>domestic_gross</th>\n",
+       "      <th>worldwide_gross</th>\n",
+       "      <th>release_month</th>\n",
+       "      <th>profit</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>470</th>\n",
+       "      <td>tt4080386</td>\n",
+       "      <td>6.5</td>\n",
+       "      <td>nm1819881</td>\n",
+       "      <td>nm6369175,nm3057599</td>\n",
+       "      <td>Sardaar Ji</td>\n",
+       "      <td>2015.0</td>\n",
+       "      <td>141.0</td>\n",
+       "      <td>Comedy,Fantasy,Horror</td>\n",
+       "      <td>Sardaar Ji</td>\n",
+       "      <td>CA</td>\n",
+       "      <td>...</td>\n",
+       "      <td>Dheeraj Rattan</td>\n",
+       "      <td>writer,director,assistant_director</td>\n",
+       "      <td>tt3213204,tt2023645,tt2746136,tt1600439</td>\n",
+       "      <td>95.0</td>\n",
+       "      <td>Dec 31, 2015</td>\n",
+       "      <td>2700000.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>8200000.0</td>\n",
+       "      <td>Dec</td>\n",
+       "      <td>5500000.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1782</th>\n",
+       "      <td>tt3431016</td>\n",
+       "      <td>5.1</td>\n",
+       "      <td>nm0004541</td>\n",
+       "      <td>nm1183861</td>\n",
+       "      <td>The Messenger</td>\n",
+       "      <td>2015.0</td>\n",
+       "      <td>101.0</td>\n",
+       "      <td>Drama,Mystery,Thriller</td>\n",
+       "      <td>Посланник</td>\n",
+       "      <td>RU</td>\n",
+       "      <td>...</td>\n",
+       "      <td>Richard Hart</td>\n",
+       "      <td>producer,editorial_department,miscellaneous</td>\n",
+       "      <td>tt4519662,tt2123265,tt3431016,tt2186886</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>Nov 13, 2009</td>\n",
+       "      <td>6500000.0</td>\n",
+       "      <td>1109660.0</td>\n",
+       "      <td>1744952.0</td>\n",
+       "      <td>Nov</td>\n",
+       "      <td>-4755048.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1787</th>\n",
+       "      <td>tt4984930</td>\n",
+       "      <td>7.7</td>\n",
+       "      <td>nm0753393</td>\n",
+       "      <td>nm7556970,nm0753393</td>\n",
+       "      <td>The Messenger</td>\n",
+       "      <td>2015.0</td>\n",
+       "      <td>89.0</td>\n",
+       "      <td>Documentary,Family</td>\n",
+       "      <td>The Messenger</td>\n",
+       "      <td>CA</td>\n",
+       "      <td>...</td>\n",
+       "      <td>Joanne Jackson</td>\n",
+       "      <td>producer</td>\n",
+       "      <td>tt1501404,tt8901942,tt4984930</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>Nov 13, 2009</td>\n",
+       "      <td>6500000.0</td>\n",
+       "      <td>1109660.0</td>\n",
+       "      <td>1744952.0</td>\n",
+       "      <td>Nov</td>\n",
+       "      <td>-4755048.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1788</th>\n",
+       "      <td>tt8706988</td>\n",
+       "      <td>5.8</td>\n",
+       "      <td>nm0664582</td>\n",
+       "      <td>nm0664582,nm2561798</td>\n",
+       "      <td>The Messenger</td>\n",
+       "      <td>2019.0</td>\n",
+       "      <td>100.0</td>\n",
+       "      <td>Drama,Thriller,War</td>\n",
+       "      <td>The Messenger</td>\n",
+       "      <td>XWW</td>\n",
+       "      <td>...</td>\n",
+       "      <td>Julie Engelbrecht</td>\n",
+       "      <td>actress</td>\n",
+       "      <td>tt1618442,tt0365675,tt0384369,tt2654620</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>Nov 13, 2009</td>\n",
+       "      <td>6500000.0</td>\n",
+       "      <td>1109660.0</td>\n",
+       "      <td>1744952.0</td>\n",
+       "      <td>Nov</td>\n",
+       "      <td>-4755048.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1843</th>\n",
+       "      <td>tt2176244</td>\n",
+       "      <td>8.0</td>\n",
+       "      <td>nm2613589</td>\n",
+       "      <td>nm2613589</td>\n",
+       "      <td>The Messenger</td>\n",
+       "      <td>2012.0</td>\n",
+       "      <td>74.0</td>\n",
+       "      <td>Drama</td>\n",
+       "      <td>The Messenger</td>\n",
+       "      <td>US</td>\n",
+       "      <td>...</td>\n",
+       "      <td>Wesley Roberts Dalton</td>\n",
+       "      <td>actor</td>\n",
+       "      <td>tt2176244</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>Nov 13, 2009</td>\n",
+       "      <td>6500000.0</td>\n",
+       "      <td>1109660.0</td>\n",
+       "      <td>1744952.0</td>\n",
+       "      <td>Nov</td>\n",
+       "      <td>-4755048.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>5 rows × 24 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "         tconst  averagerating  directors              writers          movie  \\\n",
+       "470   tt4080386            6.5  nm1819881  nm6369175,nm3057599     Sardaar Ji   \n",
+       "1782  tt3431016            5.1  nm0004541            nm1183861  The Messenger   \n",
+       "1787  tt4984930            7.7  nm0753393  nm7556970,nm0753393  The Messenger   \n",
+       "1788  tt8706988            5.8  nm0664582  nm0664582,nm2561798  The Messenger   \n",
+       "1843  tt2176244            8.0  nm2613589            nm2613589  The Messenger   \n",
+       "\n",
+       "      start_year  runtime_minutes                  genres          title  \\\n",
+       "470       2015.0            141.0   Comedy,Fantasy,Horror     Sardaar Ji   \n",
+       "1782      2015.0            101.0  Drama,Mystery,Thriller      Посланник   \n",
+       "1787      2015.0             89.0      Documentary,Family  The Messenger   \n",
+       "1788      2019.0            100.0      Drama,Thriller,War  The Messenger   \n",
+       "1843      2012.0             74.0                   Drama  The Messenger   \n",
+       "\n",
+       "     region  ...           primary_name  \\\n",
+       "470      CA  ...         Dheeraj Rattan   \n",
+       "1782     RU  ...           Richard Hart   \n",
+       "1787     CA  ...         Joanne Jackson   \n",
+       "1788    XWW  ...      Julie Engelbrecht   \n",
+       "1843     US  ...  Wesley Roberts Dalton   \n",
+       "\n",
+       "                               primary_profession  \\\n",
+       "470            writer,director,assistant_director   \n",
+       "1782  producer,editorial_department,miscellaneous   \n",
+       "1787                                     producer   \n",
+       "1788                                      actress   \n",
+       "1843                                        actor   \n",
+       "\n",
+       "                             known_for_titles    id  release_date  \\\n",
+       "470   tt3213204,tt2023645,tt2746136,tt1600439  95.0  Dec 31, 2015   \n",
+       "1782  tt4519662,tt2123265,tt3431016,tt2186886   1.0  Nov 13, 2009   \n",
+       "1787            tt1501404,tt8901942,tt4984930   1.0  Nov 13, 2009   \n",
+       "1788  tt1618442,tt0365675,tt0384369,tt2654620   1.0  Nov 13, 2009   \n",
+       "1843                                tt2176244   1.0  Nov 13, 2009   \n",
+       "\n",
+       "     production_budget domestic_gross  worldwide_gross release_month  \\\n",
+       "470          2700000.0            0.0        8200000.0           Dec   \n",
+       "1782         6500000.0      1109660.0        1744952.0           Nov   \n",
+       "1787         6500000.0      1109660.0        1744952.0           Nov   \n",
+       "1788         6500000.0      1109660.0        1744952.0           Nov   \n",
+       "1843         6500000.0      1109660.0        1744952.0           Nov   \n",
+       "\n",
+       "         profit  \n",
+       "470   5500000.0  \n",
+       "1782 -4755048.0  \n",
+       "1787 -4755048.0  \n",
+       "1788 -4755048.0  \n",
+       "1843 -4755048.0  \n",
+       "\n",
+       "[5 rows x 24 columns]"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "#rename takas['title_id'] to takas['tconst'] to that we can use it to merge on\n",
     "takas.rename(columns={'title_id':'tconst'},inplace=True)\n",
@@ -94,7 +322,15 @@
     "tcombo['profit'] = (tcombo['worldwide_gross'] - tcombo['production_budget'])\n",
     "\n",
     "#drop rows in gross and budget that are zero\n",
-    "tcombo = tcombo.loc[((tcombo['domestic_gross'] != 0) | (tcombo['worldwide_gross'] != 0)) & (tcombo['production_budget'] != 0)]"
+    "tcombo = tcombo.loc[((tcombo['domestic_gross'] != 0) | (tcombo['worldwide_gross'] != 0)) & (tcombo['production_budget'] != 0)]\n",
+    "tcombo.head()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Above is a peak at the data I am using. Below I am getting only the data I need for professions, names, and profit."
    ]
   },
   {
@@ -127,6 +363,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "This is where I get all of the actors and actresses."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 6,
    "metadata": {},
@@ -138,6 +381,13 @@
     "#find all the rows where the proffession is actress\n",
     "actress_group_sum = tcombo_profession_profit.loc[tcombo_profession_profit['primary_profession'] == 'actress']\n",
     "actress_group_sum = actress_group_sum.groupby(['primary_name']).sum().sort_values(by='profit',ascending=False)[:5]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Making the figure"
    ]
   },
   {
