--- a/Profit_vs_region.ipynb
+++ b/Profit_vs_region.ipynb
@@ -377,7 +377,7 @@
     "\n",
     "A barplot of the profitable regions (countries)\n",
     "\n",
-    "Below is where I do the actual mapping with a lambda function."
+    "Below is where I do the actual mapping with a lambda function and get only the data that I need."
    ]
   },
   {
@@ -392,6 +392,13 @@
     "tcombo_profit_region_median['region'] = tcombo_profit_region_median['region'].map(lambda x: CC[x].title())\n",
     "\n",
     "tcombo_profit_region_median = tcombo_profit_region_median.groupby(['region']).median().sort_values(by='profit',ascending=False)[:5]\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Making the plot"
    ]
   },
   {
