--- a/Profit_vs_writer.ipynb
+++ b/Profit_vs_writer.ipynb
@@ -97,6 +97,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Get only the data that I need"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 4,
    "metadata": {},
@@ -108,6 +115,13 @@
     "tcombo_profession_profit[:]['directors'] = tcombo_profession_profit['directors'].str.split(',')\n",
     "#split the professions on the comma\n",
     "tcombo_profession_profit[:]['primary_profession'] = tcombo_profession_profit['primary_profession'].str.split(',')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Now I need to make sure that there is only one entry per row."
    ]
   },
   {
@@ -127,6 +141,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Select only the writers"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 9,
    "metadata": {},
@@ -137,6 +158,13 @@
     "writer_group_median = tcombo_profession_profit.loc[tcombo_profession_profit['primary_profession'] == 'writer']\n",
     "#groupby name and average of profits for all movies that the writer had a part in\n",
     "writer_group_median = writer_group_median.groupby(['primary_name']).median().sort_values(by='profit',ascending=False)[:10]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Make the plot"
    ]
   },
   {
