June 9th Updates

--- a/microsoft_movie_analysis_final.ipynb
+++ b/microsoft_movie_analysis_final.ipynb
@@ -3044,6 +3044,20 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 13. Find the Top 10 Actors/Actresses"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Import Data"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 33,
    "metadata": {},
@@ -3071,6 +3085,13 @@
     "title_b =pd.read_csv('data/zippedData/imdb.title.basics.csv.gz')\n",
     "movies =pd.read_csv('data/zippedData/tmdb.movies.csv.gz')\n",
     "ratings = pd.read_csv('data/zippedData/imdb.title.ratings.csv.gz')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Merging title principles and name basics into a single column.**"
    ]
   },
   {
@@ -3682,6 +3703,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Filter out the professions that are not actors.**"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 36,
    "metadata": {},
@@ -3693,7 +3721,9 @@
   {
    "cell_type": "code",
    "execution_count": 37,
-   "metadata": {},
+   "metadata": {
+    "scrolled": false
+   },
    "outputs": [
     {
      "data": {
@@ -3837,9 +3867,18 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Filter out birth years greater than 1939**"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 38,
-   "metadata": {},
+   "metadata": {
+    "scrolled": false
+   },
    "outputs": [
     {
      "data": {
@@ -4086,6 +4125,13 @@
    "source": [
     "actors = actors[actors['birth_year'] > 1939]\n",
     "actors.sort_values(by=['birth_year'])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Merge actors and their individual ratings.**"
    ]
   },
   {
@@ -4382,6 +4428,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Clean the actors and ratings columns.**"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 40,
    "metadata": {},
@@ -4538,6 +4591,13 @@
    "source": [
     "actors_and_ratings.columns.str.replace(' ', '')\n",
     "actors_and_ratings.head()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Drop the columns that are not needed.**"
    ]
   },
   {
@@ -4744,6 +4804,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Filter out rows that are do not have \"actor\" or \"actress\" in \"category\" column.**"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 42,
    "metadata": {},
@@ -4944,6 +5011,14 @@
    "source": [
     "actors_and_ratings = actors_and_ratings[actors_and_ratings[\"category\"].str.contains('actor|actress', na=False)]\n",
     "actors_and_ratings"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "1. Making a new variable that stores average rating mutiplied by their votes.\n",
+    "2. Sort values by ascending."
    ]
   },
   {
@@ -5187,6 +5262,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Drop columns that are not needed.**"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 44,
    "metadata": {},
@@ -5302,6 +5384,14 @@
    "source": [
     "simple_actors_and_ratings = actors_and_ratings.drop(['tconst','nconst','category','birth_year','primary_profession','averagerating','numvotes'], axis=1)\n",
     "simple_actors_and_ratings.sort_values(by=['popularity_&_rating'],ascending=False)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "1. Group primary name,mean, and count.\n",
+    "2. Find the mean of the popularity and reviews. "
    ]
   },
   {
@@ -5441,6 +5531,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**List out the top 10**"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 47,
    "metadata": {},
@@ -5553,6 +5650,13 @@
    "source": [
     "top_10 = actors_ranking.head(10)\n",
     "top_10"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Plot Data"
    ]
   },
   {
