--- a/Profit_vs_writer.ipynb
+++ b/Profit_vs_writer.ipynb
@@ -8,7 +8,12 @@
    "source": [
     "# Profit vs Writer\n",
     "\n",
-    "This code makes a barplot of the top writers for the most profitable movies. The first three cells will be the same for each plot because I used the same data for all of them."
+    "This code makes a barplot of the top writers for the most profitable movies. The first three cells will be the same for each plot because I used the same data for all of them.\n",
+    "\n",
+    "\n",
+    "I looked at each table to make note of all available columns. I noticed the tconst and nconst columns that I counld use to merge all of the data together into one dataframe. After merging, I dropped many columns that I did not need. These included columns that I though contained duplicate information or information that would not be useful. Next, I dropped rows with null values in a subset of all columns. I used outer merges so there where lots of rows with missing data. I wanted to be sure of the data that I had before getting rid of any. I also did not want to drop rows that were only missing data in either domestic or worldwide gross because I only needed one.\n",
+    "\n",
+    "Next, I made a new dataframe with only the rows where the profession was a writer. I grouped that dataframe my the median profit and the name of the person."
    ]
   },
   {
@@ -92,6 +97,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Get only the data that I need"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 4,
    "metadata": {},
@@ -103,6 +115,13 @@
     "tcombo_profession_profit[:]['directors'] = tcombo_profession_profit['directors'].str.split(',')\n",
     "#split the professions on the comma\n",
     "tcombo_profession_profit[:]['primary_profession'] = tcombo_profession_profit['primary_profession'].str.split(',')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Now I need to make sure that there is only one entry per row."
    ]
   },
   {
@@ -122,8 +141,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Select only the writers"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -135,8 +161,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Make the plot"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
