--- a/Profit_vs_region.ipynb
+++ b/Profit_vs_region.ipynb
@@ -8,7 +8,12 @@
    "source": [
     "### profit vs region\n",
     "\n",
-    "This is a bar plot of the regions where movies made the most money. I found a dictionary of country codes and their country names. I used it to map the country names in place of the codes in the region column. This makes the plot labels more meaningful."
+    "This is a bar plot of the regions where movies made the most money. \n",
+    "\n",
+    "\n",
+    "I looked at each table to make note of all available columns. I noticed the tconst and nconst columns that I counld use to merge all of the data together into one dataframe. After merging, I dropped many columns that I did not need. These included columns that I though contained duplicate information or information that would not be useful. Next, I dropped rows with null values in a subset of all columns. I used outer merges so there where lots of rows with missing data. I wanted to be sure of the data that I had before getting rid of any. I also did not want to drop rows that were only missing data in either domestic or worldwide gross because I only needed one.\n",
+    "\n",
+    "I found a dictionary of country codes and their country names. I used it to map the country names in place of the codes in the region column. This makes the plot labels more meaningful."
    ]
   },
   {
@@ -372,7 +377,7 @@
     "\n",
     "A barplot of the profitable regions (countries)\n",
     "\n",
-    "Below is where I do the actual mapping with a lambda function."
+    "Below is where I do the actual mapping with a lambda function and get only the data that I need."
    ]
   },
   {
@@ -387,6 +392,13 @@
     "tcombo_profit_region_median['region'] = tcombo_profit_region_median['region'].map(lambda x: CC[x].title())\n",
     "\n",
     "tcombo_profit_region_median = tcombo_profit_region_median.groupby(['region']).median().sort_values(by='profit',ascending=False)[:5]\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Making the plot"
    ]
   },
   {
